[gd_scene load_steps=4 format=2]

[ext_resource path="res://script/Enemy.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 24 )

[node name="Enemy" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.0235294, 0.509804, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="CloseCallDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CloseCallDetection"]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="CloseCallDetection" to="." method="_on_CloseCallDetection_body_entered"]
